# var_my

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  readme.md
kvali/: asgi.py  settings.py  urls.py  wsgi.py
kvali_app/: apps.py  decorators.py  logging.py  metrics.py  middleware.py  models.py  tests.py  urls.py  views.py
kvali_app/migrations/: 0001_initial.py
nginx/: default.conf.template
prometheus/: prometheus_config.yml
